[gd_scene load_steps=6 format=3 uid="uid://dk06xcftuc7go"]

[ext_resource type="Script" uid="uid://d2t751qmv78rk" path="res://road/procedural_road.gd" id="1_yt7gp"]
[ext_resource type="Script" uid="uid://b33cvu61bwbt1" path="res://road/road_path_3d.gd" id="2_1qq4v"]
[ext_resource type="Script" uid="uid://cri41gevumu88" path="res://road/road_lanes_mesh.gd" id="3_sq1jg"]
[ext_resource type="Material" uid="uid://d33khyiglywww" path="res://road/neon.material" id="4_kc1tq"]

[sub_resource type="Curve3D" id="Curve3D_c7wnc"]
_data = {
"points": PackedVector3Array(0, 0, -20, 0, 0, 20, 0, 0, 0, 0, 0, -20, 0, 0, 20, 0, 0, 40, 15.3553, 0, -12.8146, -15.3553, 0, 12.8146, -53.1045, 0, 84.3176, 19.9749, 0, -1.00189, -19.9749, 0, 1.00189, -135.735, 0, 88.4622, 15.8223, 0, -12.2334, -15.8223, 0, 12.2334, -189.93, 0, 130.364, 6.56927, 0, -18.8903, -6.56927, 0, 18.8903, -210.122, 0, 188.428, 2.34559, 0, -19.862, -2.34559, 0, 19.862, -219.678, 0, 269.348),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0)
}
point_count = 7
up_vector_enabled = false

[node name="ProceduralRoad" type="Node3D"]
process_thread_group = 2
process_thread_group_order = 1
process_thread_messages = 0
script = ExtResource("1_yt7gp")

[node name="RoadPath3D" type="Path3D" parent="."]
curve = SubResource("Curve3D_c7wnc")
script = ExtResource("2_1qq4v")

[node name="RoadLanesMesh" type="Node3D" parent="." node_paths=PackedStringArray("road")]
script = ExtResource("3_sq1jg")
road = NodePath("../RoadPath3D")
material = ExtResource("4_kc1tq")

[connection signal="body_entered" from="@Node3D@21818/Coin" to="@Node3D@21818/Coin" method="_on_coin_body_enter"]
[connection signal="body_entered" from="@Node3D@21818/@Area3D@21817" to="@Node3D@21818/@Area3D@21817" method="_on_coin_body_enter"]
[connection signal="body_entered" from="@Node3D@21827/Coin" to="@Node3D@21827/Coin" method="_on_coin_body_enter"]
[connection signal="body_entered" from="@Node3D@21827/@Area3D@21823" to="@Node3D@21827/@Area3D@21823" method="_on_coin_body_enter"]
[connection signal="body_entered" from="@Node3D@21827/@Area3D@21824" to="@Node3D@21827/@Area3D@21824" method="_on_coin_body_enter"]
[connection signal="body_entered" from="@Node3D@21827/@Area3D@21825" to="@Node3D@21827/@Area3D@21825" method="_on_coin_body_enter"]
[connection signal="body_entered" from="@Node3D@21827/@Area3D@21826" to="@Node3D@21827/@Area3D@21826" method="_on_coin_body_enter"]
[connection signal="body_entered" from="@Node3D@21835/Coin" to="@Node3D@21835/Coin" method="_on_coin_body_enter"]
[connection signal="body_entered" from="@Node3D@21835/@Area3D@21832" to="@Node3D@21835/@Area3D@21832" method="_on_coin_body_enter"]
[connection signal="body_entered" from="@Node3D@21835/@Area3D@21833" to="@Node3D@21835/@Area3D@21833" method="_on_coin_body_enter"]
[connection signal="body_entered" from="@Node3D@21835/@Area3D@21834" to="@Node3D@21835/@Area3D@21834" method="_on_coin_body_enter"]
[connection signal="body_entered" from="@Node3D@21841/Coin" to="@Node3D@21841/Coin" method="_on_coin_body_enter"]
[connection signal="body_entered" from="@Node3D@21841/@Area3D@21840" to="@Node3D@21841/@Area3D@21840" method="_on_coin_body_enter"]
[connection signal="body_entered" from="@Node3D@21853/Coin" to="@Node3D@21853/Coin" method="_on_coin_body_enter"]
[connection signal="body_entered" from="@Node3D@21853/@Area3D@21846" to="@Node3D@21853/@Area3D@21846" method="_on_coin_body_enter"]
[connection signal="body_entered" from="@Node3D@21853/@Area3D@21847" to="@Node3D@21853/@Area3D@21847" method="_on_coin_body_enter"]
[connection signal="body_entered" from="@Node3D@21853/@Area3D@21848" to="@Node3D@21853/@Area3D@21848" method="_on_coin_body_enter"]
[connection signal="body_entered" from="@Node3D@21853/@Area3D@21849" to="@Node3D@21853/@Area3D@21849" method="_on_coin_body_enter"]
[connection signal="body_entered" from="@Node3D@21853/@Area3D@21850" to="@Node3D@21853/@Area3D@21850" method="_on_coin_body_enter"]
[connection signal="body_entered" from="@Node3D@21853/@Area3D@21851" to="@Node3D@21853/@Area3D@21851" method="_on_coin_body_enter"]
[connection signal="body_entered" from="@Node3D@21853/@Area3D@21852" to="@Node3D@21853/@Area3D@21852" method="_on_coin_body_enter"]
[connection signal="body_entered" from="@Node3D@21862/Coin" to="@Node3D@21862/Coin" method="_on_coin_body_enter"]
[connection signal="body_entered" from="@Node3D@21862/@Area3D@21858" to="@Node3D@21862/@Area3D@21858" method="_on_coin_body_enter"]
[connection signal="body_entered" from="@Node3D@21862/@Area3D@21859" to="@Node3D@21862/@Area3D@21859" method="_on_coin_body_enter"]
[connection signal="body_entered" from="@Node3D@21862/@Area3D@21860" to="@Node3D@21862/@Area3D@21860" method="_on_coin_body_enter"]
[connection signal="body_entered" from="@Node3D@21862/@Area3D@21861" to="@Node3D@21862/@Area3D@21861" method="_on_coin_body_enter"]
